# OpenCGRA

./: .gitignore  .travis.yml  LICENSE  README.md  TODO  codecov.yml  constraints.txt  pytest.ini  requirements.txt
acc/: Acc.py  AccFL.py  AccRTL.py  FIX
acc/test/: Acc_test.py  dfg.json  dfg_fir.json  dfg_simple.json
cgra/: CGRA.py  CGRACL.py  CGRAFL.py  CGRARTL.py  PseudoCGRA.py
cgra/test/: CGRACL_FIR_demo_test.py  CGRACL_fir_demo_test.py  CGRACL_test.py  CGRAFL_test.py  CGRARTL_test.py  CGRA_demo_test.py  CGRA_test.py  PseudoCGRA_test.py  config_fir.json  dfg_fir.json
cgra/translate/: CGRARTL_hetero_test.py  CGRA_2x2_test.py  CGRA_hetero_2x2_test.py  CGRA_test.py
compiler/: CMakeLists.txt  README.md
compiler/mapper/: CGRA.cpp  CGRA.h  CGRALink.cpp  CGRALink.h  CGRANode.cpp  CGRANode.h  CMakeLists.txt  DFG.cpp  DFG.h  DFGEdge.cpp  DFGEdge.h  DFGNode.cpp  DFGNode.h  Mapper.cpp  Mapper.h  mapperPass.cpp
doc/: OpenCGRA Simulation Technical Documentation.md
fu/: Alu.py  Fu.py  Logic.py  MemUnit.py  Mul.py  MulAlu.py  MulShifter.py  PrlMulAlu.py  SeqMulAlu.py  SeqMulShifter.py  Shifter.py  ThreeComb.py  ThreeMulAluShifter.py  TwoPrlComb.py  TwoSeqComb.py  opt_type.py
fu/basic/: Fu.py  Phi.py  ThreeComb.py  ThreeCombo.py  TwoPrlComb.py  (+3 more)
functionalUnit/: Alu.py  Mul.py  Shifter.py  opt_type.py
ifcs/: opt_type.py
lib/: ctrl_helper.py  dfg_helper.py  map_helper.py  mem_param.py  messages.py  opt_type.py  routing_table.py
noc/: Channel.py  ChannelRTL.py  Crossbar.py  CrossbarRTL.py  Multicaster.py  MulticasterRTL.py
rf/: RegFile.py  RegisterFile.py
sram/: Mem.py
systolic/: SystolicCL.py
tile/: PseudoTile.py  Tile.py  TileCL.py  TileRTL.py
(+109 files in other folders)
